src/main/default/objects/Curtain__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Статус</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>На розгляді</fullName>
                <default>true</default>
                <label>На розгляді</label>
            </value>
            <value>
                <fullName>Обрано кліентом</fullName>
            </value>
            <value>
                <fullName>Замовлено тканину</fullName>
            </value>
            <value>
                <fullName>В цеху</fullName>
            </value>
            <value>
                <fullName>Очікує видачі</fullName>
            </value>
            <value>
                <fullName>Виконано</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>