src/main/default/objects/Curtain__c/fields/Tasma2__c.field-meta.xml
<CustomField>
    <fullName>Tasma2__c</fullName>
    <label>Тасьма</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Прозора фіксована</fullName>
            </value>
            <value>
                <fullName>ХБ фіксована</fullName>
            </value>
            <value>
                <fullName>Не фіксована</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>