src/main/default/objects/Curtain__c/fields/TasmaMetrage__c.field-meta.xml
<CustomField>
    <fullName>TasmaMetrage__c</fullName>
    <label>Метраж тасьми</label>
    <length>255</length>
    <type>Text</type>
</CustomField>