src/main/default/objects/Curtain__c/fields/TasmaPlace__c.field-meta.xml
<CustomField>
    <fullName>TasmaPlace__c</fullName>
    <defaultValue>&quot;в край&quot;</defaultValue>
    <label>Розташування тасьми</label>
    <length>255</length>
    <type>Text</type>
</CustomField>