src/main/default/objects/Curtain__c/fields/TasmaPrice2__c.field-meta.xml
<CustomField>
    <fullName>TasmaPrice2__c</fullName>
    <label>Ціна тасьми</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>85</fullName>
                <label>85 грн.</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>110 грн.</label>
            </value>
            <value>
                <fullName>140</fullName>
                <label>140 грн.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>