src/main/default/objects/Curtain__c/fields/TasmaPrice__c.field-meta.xml
<CustomField>
    <fullName>TasmaPrice__c</fullName>
    <label>Ціна тасьми</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>85</fullName>
                <label>85 грн.</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>110 грн.</label>
            </value>
            <value>
                <fullName>140</fullName>
                <label>140 грн.</label>
            </value>
            <value>
                <fullName>65</fullName>
                <label>65 грн.</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>55 грн.</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>45 грн.</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>35 грн.</label>
            </value>
            <value>
                <fullName>130</fullName>
                <isActive>false</isActive>
                <label>130</label>
            </value>
            <value>
                <fullName>150</fullName>
                <isActive>false</isActive>
                <label>150</label>
            </value>
            <value>
                <fullName>160</fullName>
                <isActive>false</isActive>
                <label>160</label>
            </value>
            <value>
                <fullName>230</fullName>
                <isActive>false</isActive>
                <label>230</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>