src/main/default/objects/Curtain__c/fields/TasmaPriceSum__c.field-meta.xml
<CustomField>
    <fullName>TasmaPriceSum__c</fullName>
    <label>Ціна за тасьму</label>
    <length>255</length>
    <type>Text</type>
</CustomField>