src/main/default/objects/Curtain__c/fields/Type2__c.field-meta.xml
<CustomField>
    <fullName>Type2__c</fullName>
    <label>Тип</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Штора</fullName>
            </value>
            <value>
                <fullName>Тюль</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>