src/main/default/objects/Curtain__c/fields/Viizd2__c.field-meta.xml
<CustomField>
    <fullName>Viizd2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Виїзд</label>
    <type>Checkbox</type>
</CustomField>