src/main/default/objects/Curtain__c/fields/Zbirka2__c.field-meta.xml
<CustomField>
    <fullName>Zbirka2__c</fullName>
    <label>Збірка</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enigma 1:1,5</fullName>
            </value>
            <value>
                <fullName>Enigma 1:1,8</fullName>
            </value>
            <value>
                <fullName>Enigma 1:2</fullName>
            </value>
            <value>
                <fullName>Enigma 1:2,5</fullName>
            </value>
            <value>
                <fullName>Enigma 1:3</fullName>
            </value>
            <value>
                <fullName>Sofora 1:1,8</fullName>
            </value>
            <value>
                <fullName>Sofora 1:2</fullName>
            </value>
            <value>
                <fullName>Pinella</fullName>
            </value>
            <value>
                <fullName>Хвиля 1:2</fullName>
            </value>
            <value>
                <fullName>Люверсна</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>