src/main/default/objects/Curtain__c/fields/Zbirka__c.field-meta.xml
<CustomField>
    <fullName>Zbirka__c</fullName>
    <label>Збірка</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enigma 1:1,5</fullName>
            </value>
            <value>
                <fullName>Enigma 1:1,65</fullName>
            </value>
            <value>
                <fullName>Enigma 1:1,8</fullName>
            </value>
            <value>
                <fullName>Enigma 1:2</fullName>
            </value>
            <value>
                <fullName>Enigma 1:2,5</fullName>
            </value>
            <value>
                <fullName>Enigma 1:3</fullName>
            </value>
            <value>
                <fullName>Sofora 1:1,8</fullName>
            </value>
            <value>
                <fullName>Sofora 1:2</fullName>
            </value>
            <value>
                <fullName>Pinella</fullName>
                <label>Pinella 1:3</label>
            </value>
            <value>
                <fullName>Хвиля 1:1,5</fullName>
            </value>
            <value>
                <fullName>Хвиля 1:2</fullName>
            </value>
            <value>
                <fullName>Люверсна</fullName>
            </value>
            <value>
                <fullName>Глайдерна 1:2 + FES</fullName>
            </value>
            <value>
                <fullName>Pinella 5 см звичайна рівномірна 1:2</fullName>
            </value>
            <value>
                <fullName>Pinella 5 см звичайна вафелька 1:2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>