src/main/default/objects/Curtain__c/fields/zbirkaTasmu__c.field-meta.xml
<CustomField>
    <fullName>zbirkaTasmu__c</fullName>
    <label>Назва Збірки</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>zbirka</valueSetName>
    </valueSet>
</CustomField>