src/main/default/objects/Curtain__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ContactName__c</columns>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Room__c</columns>
    <columns>Type__c</columns>
    <columns>Meterage__c</columns>
    <columns>GeneralPrice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>