src/main/default/objects/Curtain__c/listViews/CurtainsInProcess.listView-meta.xml
<ListView>
    <fullName>CurtainsInProcess</fullName>
    <columns>Contact__c</columns>
    <columns>Name__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Замовлено тканину,В цеху</value>
    </filters>
    <label>Штори в роботі</label>
</ListView>