src/main/default/objects/Curtain__c/listViews/ReadyCurtains.listView-meta.xml
<ListView>
    <fullName>ReadyCurtains</fullName>
    <columns>ContactName__c</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Очікує видачі</value>
    </filters>
    <label>Штори на видачу</label>
</ListView>